tests/machine/x/hs/exists_builtin.error

tests/machine/x/hs/exists_builtin.hs:99:6: error:
    parse error on input ‘=’
   |
99 | data = [1, 2]
   |      ^
